Changes to be committed: 	modified:   .gitignore 	modified:   notebooks/EDA.ipynb 	modified:   notebooks/VSTAN.ipynb 	modified:   notebooks/cold_start_user_predictions.ipynb 	new file:   notebooks/cold_start_user_predictions_ad.ipynb 	modified:   notebooks/ensemble.ipynb 	new file:   notebooks/ensembly_simple.ipynb 	new file:   notebooks/ensembly_simple_v1.ipynb 	new file:   notebooks/ensembly_simple_v2.ipynb 	modified:   notebooks/predictions_from_pas_history.ipynb

--- a/notebooks/ensemble.ipynb
+++ b/notebooks/ensemble.ipynb
@@ -78,27 +78,14 @@
     },
     "tags": []
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Collecting polars\n",
-      "  Downloading polars-0.15.14-cp37-abi3-macosx_10_7_x86_64.whl (14.0 MB)\n",
-      "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m14.0/14.0 MB\u001b[0m \u001b[31m10.8 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m00:01\u001b[0m00:01\u001b[0m\n",
-      "\u001b[?25hRequirement already satisfied: typing_extensions>=4.0.0 in /Users/Artem_Boltaev/opt/anaconda3/lib/python3.9/site-packages (from polars) (4.3.0)\n",
-      "Installing collected packages: polars\n",
-      "Successfully installed polars-0.15.14\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#!pip install polars # why are we using polars? it has much smaller memory footprint than pandas!"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "07899940",
    "metadata": {
     "execution": {
@@ -140,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "8da75e22",
    "metadata": {
     "execution": {
@@ -161,9 +148,9 @@
    "outputs": [],
    "source": [
     "paths = [\n",
-    "    \"/Users/Artem_Boltaev/Documents/EPAM Projects/7. RecSys_OTTO_Kaggle/source_code/otto_recsys_kaggle/notebooks/submission_baseline_0483.csv\",\n",
-    "    \"/Users/Artem_Boltaev/Documents/EPAM Projects/7. RecSys_OTTO_Kaggle/source_code/otto_recsys_kaggle/notebooks/submission_mix_open_0578.csv\",\n",
-    "    \"/Users/Artem_Boltaev/Documents/EPAM Projects/7. RecSys_OTTO_Kaggle/source_code/otto_recsys_kaggle/notebooks/submission_vstan_1_0.45.csv\",\n",
+    "    \"/Users/Artem_Boltaev/Documents/EPAM Projects/7. RecSys_OTTO_Kaggle/source_code/otto_recsys_kaggle/data/interim/submission_OTTO_0.578.csv.gz\",\n",
+    "    \"/Users/Artem_Boltaev/Documents/EPAM Projects/7. RecSys_OTTO_Kaggle/source_code/otto_recsys_kaggle/models/session-rec/results/next/OTTO/submission_OTTO_V8.csv.gz\",\n",
+    "    \"/Users/Artem_Boltaev/Documents/EPAM Projects/7. RecSys_OTTO_Kaggle/source_code/otto_recsys_kaggle/models/session-rec/results/next/OTTO/submission_OTTO_V7.csv.gz\",\n",
     "]"
    ]
   },
@@ -186,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "954473c9",
    "metadata": {
     "execution": {
@@ -238,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "7dc65582",
    "metadata": {
     "execution": {
@@ -315,21 +302,10 @@
        "<tbody>\n",
        "<tr>\n",
        "<td>\n",
-       "&quot;12899779_click...\n",
+       "&quot;14061476_carts...\n",
        "</td>\n",
        "<td>\n",
-       "&quot;59625&quot;\n",
-       "</td>\n",
-       "<td>\n",
-       "1\n",
-       "</td>\n",
-       "</tr>\n",
-       "<tr>\n",
-       "<td>\n",
-       "&quot;12899779_click...\n",
-       "</td>\n",
-       "<td>\n",
-       "&quot;29735&quot;\n",
+       "&quot;743431&quot;\n",
        "</td>\n",
        "<td>\n",
        "1\n",
@@ -337,21 +313,10 @@
        "</tr>\n",
        "<tr>\n",
        "<td>\n",
-       "&quot;12899779_click...\n",
+       "&quot;14061476_carts...\n",
        "</td>\n",
        "<td>\n",
-       "&quot;1733943&quot;\n",
-       "</td>\n",
-       "<td>\n",
-       "1\n",
-       "</td>\n",
-       "</tr>\n",
-       "<tr>\n",
-       "<td>\n",
-       "&quot;12899779_click...\n",
-       "</td>\n",
-       "<td>\n",
-       "&quot;108125&quot;\n",
+       "&quot;84110&quot;\n",
        "</td>\n",
        "<td>\n",
        "1\n",
@@ -359,10 +324,32 @@
        "</tr>\n",
        "<tr>\n",
        "<td>\n",
-       "&quot;12899779_click...\n",
+       "&quot;14061476_carts...\n",
        "</td>\n",
        "<td>\n",
-       "&quot;1603001&quot;\n",
+       "&quot;1267119&quot;\n",
+       "</td>\n",
+       "<td>\n",
+       "1\n",
+       "</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "<td>\n",
+       "&quot;14061476_carts...\n",
+       "</td>\n",
+       "<td>\n",
+       "&quot;536718&quot;\n",
+       "</td>\n",
+       "<td>\n",
+       "1\n",
+       "</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "<td>\n",
+       "&quot;14061476_carts...\n",
+       "</td>\n",
+       "<td>\n",
+       "&quot;1236804&quot;\n",
        "</td>\n",
        "<td>\n",
        "1\n",
@@ -374,20 +361,20 @@
       ],
       "text/plain": [
        "shape: (5, 3)\n",
-       "┌─────────────────┬─────────┬──────┐\n",
-       "│ session_type    ┆ aid     ┆ vote │\n",
-       "│ ---             ┆ ---     ┆ ---  │\n",
-       "│ str             ┆ str     ┆ u8   │\n",
-       "╞═════════════════╪═════════╪══════╡\n",
-       "│ 12899779_clicks ┆ 59625   ┆ 1    │\n",
-       "│ 12899779_clicks ┆ 29735   ┆ 1    │\n",
-       "│ 12899779_clicks ┆ 1733943 ┆ 1    │\n",
-       "│ 12899779_clicks ┆ 108125  ┆ 1    │\n",
-       "│ 12899779_clicks ┆ 1603001 ┆ 1    │\n",
-       "└─────────────────┴─────────┴──────┘"
+       "┌────────────────┬─────────┬──────┐\n",
+       "│ session_type   ┆ aid     ┆ vote │\n",
+       "│ ---            ┆ ---     ┆ ---  │\n",
+       "│ str            ┆ str     ┆ u8   │\n",
+       "╞════════════════╪═════════╪══════╡\n",
+       "│ 14061476_carts ┆ 743431  ┆ 1    │\n",
+       "│ 14061476_carts ┆ 84110   ┆ 1    │\n",
+       "│ 14061476_carts ┆ 1267119 ┆ 1    │\n",
+       "│ 14061476_carts ┆ 536718  ┆ 1    │\n",
+       "│ 14061476_carts ┆ 1236804 ┆ 1    │\n",
+       "└────────────────┴─────────┴──────┘"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -465,7 +452,7 @@
        "    }\n",
        "</style>\n",
        "<table border=\"1\" class=\"dataframe\">\n",
-       "<small>shape: (5, 5)</small>\n",
+       "<small>shape: (5, 4)</small>\n",
        "<thead>\n",
        "<tr>\n",
        "<th>\n",
@@ -480,9 +467,6 @@
        "<th>\n",
        "vote_right\n",
        "</th>\n",
-       "<th>\n",
-       "vote_right2\n",
-       "</th>\n",
        "</tr>\n",
        "<tr>\n",
        "<td>\n",
@@ -490,9 +474,6 @@
        "</td>\n",
        "<td>\n",
        "str\n",
-       "</td>\n",
-       "<td>\n",
-       "u8\n",
        "</td>\n",
        "<td>\n",
        "u8\n",
@@ -514,9 +495,6 @@
        "1\n",
        "</td>\n",
        "<td>\n",
-       "1\n",
-       "</td>\n",
-       "<td>\n",
        "null\n",
        "</td>\n",
        "</tr>\n",
@@ -533,9 +511,6 @@
        "<td>\n",
        "1\n",
        "</td>\n",
-       "<td>\n",
-       "null\n",
-       "</td>\n",
        "</tr>\n",
        "<tr>\n",
        "<td>\n",
@@ -543,9 +518,6 @@
        "</td>\n",
        "<td>\n",
        "&quot;1267119&quot;\n",
-       "</td>\n",
-       "<td>\n",
-       "null\n",
        "</td>\n",
        "<td>\n",
        "1\n",
@@ -560,9 +532,6 @@
        "</td>\n",
        "<td>\n",
        "&quot;536718&quot;\n",
-       "</td>\n",
-       "<td>\n",
-       "1\n",
        "</td>\n",
        "<td>\n",
        "1\n",
@@ -584,27 +553,24 @@
        "<td>\n",
        "1\n",
        "</td>\n",
-       "<td>\n",
-       "null\n",
-       "</td>\n",
        "</tr>\n",
        "</tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "shape: (5, 5)\n",
-       "┌────────────────┬─────────┬──────┬────────────┬─────────────┐\n",
-       "│ session_type   ┆ aid     ┆ vote ┆ vote_right ┆ vote_right2 │\n",
-       "│ ---            ┆ ---     ┆ ---  ┆ ---        ┆ ---         │\n",
-       "│ str            ┆ str     ┆ u8   ┆ u8         ┆ u8          │\n",
-       "╞════════════════╪═════════╪══════╪════════════╪═════════════╡\n",
-       "│ 14061476_carts ┆ 743431  ┆ 1    ┆ 1          ┆ null        │\n",
-       "│ 14061476_carts ┆ 84110   ┆ 1    ┆ 1          ┆ null        │\n",
-       "│ 14061476_carts ┆ 1267119 ┆ null ┆ 1          ┆ null        │\n",
-       "│ 14061476_carts ┆ 536718  ┆ 1    ┆ 1          ┆ null        │\n",
-       "│ 14061476_carts ┆ 1236804 ┆ 1    ┆ 1          ┆ null        │\n",
-       "└────────────────┴─────────┴──────┴────────────┴─────────────┘"
+       "shape: (5, 4)\n",
+       "┌────────────────┬─────────┬──────┬────────────┐\n",
+       "│ session_type   ┆ aid     ┆ vote ┆ vote_right │\n",
+       "│ ---            ┆ ---     ┆ ---  ┆ ---        │\n",
+       "│ str            ┆ str     ┆ u8   ┆ u8         │\n",
+       "╞════════════════╪═════════╪══════╪════════════╡\n",
+       "│ 14061476_carts ┆ 743431  ┆ 1    ┆ null       │\n",
+       "│ 14061476_carts ┆ 84110   ┆ 1    ┆ 1          │\n",
+       "│ 14061476_carts ┆ 1267119 ┆ 1    ┆ null       │\n",
+       "│ 14061476_carts ┆ 536718  ┆ 1    ┆ null       │\n",
+       "│ 14061476_carts ┆ 1236804 ┆ 1    ┆ 1          │\n",
+       "└────────────────┴─────────┴──────┴────────────┘"
       ]
      },
      "execution_count": 7,
@@ -613,7 +579,10 @@
     }
    ],
    "source": [
+    "#thry submission\n",
     "subs = subs[0].join(subs[1], how='outer', on=['session_type', 'aid']).join(subs[2], how='outer', on=['session_type', 'aid'], suffix='_right2')\n",
+    "\n",
+    "\n",
     "subs.head()"
    ]
   },
@@ -656,138 +625,18 @@
    },
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe td {\n",
-       "        white-space: pre;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe td {\n",
-       "        padding-top: 0;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe td {\n",
-       "        padding-bottom: 0;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "<small>shape: (5, 3)</small>\n",
-       "<thead>\n",
-       "<tr>\n",
-       "<th>\n",
-       "session_type\n",
-       "</th>\n",
-       "<th>\n",
-       "aid\n",
-       "</th>\n",
-       "<th>\n",
-       "vote_sum\n",
-       "</th>\n",
-       "</tr>\n",
-       "<tr>\n",
-       "<td>\n",
-       "str\n",
-       "</td>\n",
-       "<td>\n",
-       "str\n",
-       "</td>\n",
-       "<td>\n",
-       "u8\n",
-       "</td>\n",
-       "</tr>\n",
-       "</thead>\n",
-       "<tbody>\n",
-       "<tr>\n",
-       "<td>\n",
-       "&quot;14349622_order...\n",
-       "</td>\n",
-       "<td>\n",
-       "&quot;1011392&quot;\n",
-       "</td>\n",
-       "<td>\n",
-       "3\n",
-       "</td>\n",
-       "</tr>\n",
-       "<tr>\n",
-       "<td>\n",
-       "&quot;14516790_order...\n",
-       "</td>\n",
-       "<td>\n",
-       "&quot;88856&quot;\n",
-       "</td>\n",
-       "<td>\n",
-       "3\n",
-       "</td>\n",
-       "</tr>\n",
-       "<tr>\n",
-       "<td>\n",
-       "&quot;14516790_order...\n",
-       "</td>\n",
-       "<td>\n",
-       "&quot;84921&quot;\n",
-       "</td>\n",
-       "<td>\n",
-       "3\n",
-       "</td>\n",
-       "</tr>\n",
-       "<tr>\n",
-       "<td>\n",
-       "&quot;13813191_carts...\n",
-       "</td>\n",
-       "<td>\n",
-       "&quot;1079588&quot;\n",
-       "</td>\n",
-       "<td>\n",
-       "3\n",
-       "</td>\n",
-       "</tr>\n",
-       "<tr>\n",
-       "<td>\n",
-       "&quot;13813191_carts...\n",
-       "</td>\n",
-       "<td>\n",
-       "&quot;1043508&quot;\n",
-       "</td>\n",
-       "<td>\n",
-       "3\n",
-       "</td>\n",
-       "</tr>\n",
-       "</tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "shape: (5, 3)\n",
-       "┌─────────────────┬─────────┬──────────┐\n",
-       "│ session_type    ┆ aid     ┆ vote_sum │\n",
-       "│ ---             ┆ ---     ┆ ---      │\n",
-       "│ str             ┆ str     ┆ u8       │\n",
-       "╞═════════════════╪═════════╪══════════╡\n",
-       "│ 14349622_orders ┆ 1011392 ┆ 3        │\n",
-       "│ 14516790_orders ┆ 88856   ┆ 3        │\n",
-       "│ 14516790_orders ┆ 84921   ┆ 3        │\n",
-       "│ 13813191_carts  ┆ 1079588 ┆ 3        │\n",
-       "│ 13813191_carts  ┆ 1043508 ┆ 3        │\n",
-       "└─────────────────┴─────────┴──────────┘"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "NotFoundError",
+     "evalue": "vote_right2",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNotFoundError\u001b[0m                             Traceback (most recent call last)",
+      "\u001b[1;32m/Users/Artem_Boltaev/Documents/EPAM Projects/7. RecSys_OTTO_Kaggle/source_code/otto_recsys_kaggle/notebooks/ensemble.ipynb Cell 14\u001b[0m in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> <a href='vscode-notebook-cell:/Users/Artem_Boltaev/Documents/EPAM%20Projects/7.%20RecSys_OTTO_Kaggle/source_code/otto_recsys_kaggle/notebooks/ensemble.ipynb#X16sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m subs \u001b[39m=\u001b[39m (subs\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/Artem_Boltaev/Documents/EPAM%20Projects/7.%20RecSys_OTTO_Kaggle/source_code/otto_recsys_kaggle/notebooks/ensemble.ipynb#X16sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m     \u001b[39m.\u001b[39;49mfill_null(\u001b[39m0\u001b[39;49m)\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/Artem_Boltaev/Documents/EPAM%20Projects/7.%20RecSys_OTTO_Kaggle/source_code/otto_recsys_kaggle/notebooks/ensemble.ipynb#X16sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m     \u001b[39m.\u001b[39;49mwith_column((pl\u001b[39m.\u001b[39;49mcol(\u001b[39m'\u001b[39;49m\u001b[39mvote\u001b[39;49m\u001b[39m'\u001b[39;49m) \u001b[39m+\u001b[39;49m pl\u001b[39m.\u001b[39;49mcol(\u001b[39m'\u001b[39;49m\u001b[39mvote_right\u001b[39;49m\u001b[39m'\u001b[39;49m) \u001b[39m+\u001b[39;49m pl\u001b[39m.\u001b[39;49mcol(\u001b[39m'\u001b[39;49m\u001b[39mvote_right2\u001b[39;49m\u001b[39m'\u001b[39;49m))\u001b[39m.\u001b[39;49malias(\u001b[39m'\u001b[39;49m\u001b[39mvote_sum\u001b[39;49m\u001b[39m'\u001b[39;49m))\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/Artem_Boltaev/Documents/EPAM%20Projects/7.%20RecSys_OTTO_Kaggle/source_code/otto_recsys_kaggle/notebooks/ensemble.ipynb#X16sZmlsZQ%3D%3D?line=3'>4</a>\u001b[0m     \u001b[39m.\u001b[39mdrop([\u001b[39m'\u001b[39m\u001b[39mvote\u001b[39m\u001b[39m'\u001b[39m, \u001b[39m'\u001b[39m\u001b[39mvote_right\u001b[39m\u001b[39m'\u001b[39m, \u001b[39m'\u001b[39m\u001b[39mvote_right2\u001b[39m\u001b[39m'\u001b[39m])\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/Artem_Boltaev/Documents/EPAM%20Projects/7.%20RecSys_OTTO_Kaggle/source_code/otto_recsys_kaggle/notebooks/ensemble.ipynb#X16sZmlsZQ%3D%3D?line=4'>5</a>\u001b[0m     \u001b[39m.\u001b[39msort(by\u001b[39m=\u001b[39m\u001b[39m'\u001b[39m\u001b[39mvote_sum\u001b[39m\u001b[39m'\u001b[39m)\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/Artem_Boltaev/Documents/EPAM%20Projects/7.%20RecSys_OTTO_Kaggle/source_code/otto_recsys_kaggle/notebooks/ensemble.ipynb#X16sZmlsZQ%3D%3D?line=5'>6</a>\u001b[0m     \u001b[39m.\u001b[39mreverse()\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/Artem_Boltaev/Documents/EPAM%20Projects/7.%20RecSys_OTTO_Kaggle/source_code/otto_recsys_kaggle/notebooks/ensemble.ipynb#X16sZmlsZQ%3D%3D?line=6'>7</a>\u001b[0m )\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/Artem_Boltaev/Documents/EPAM%20Projects/7.%20RecSys_OTTO_Kaggle/source_code/otto_recsys_kaggle/notebooks/ensemble.ipynb#X16sZmlsZQ%3D%3D?line=8'>9</a>\u001b[0m subs\u001b[39m.\u001b[39mhead()\n",
+      "File \u001b[0;32m~/opt/anaconda3/lib/python3.9/site-packages/polars/internals/dataframe/frame.py:4206\u001b[0m, in \u001b[0;36mDataFrame.with_column\u001b[0;34m(self, column)\u001b[0m\n\u001b[1;32m   4165\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mwith_column\u001b[39m(\u001b[39mself\u001b[39m, column: pli\u001b[39m.\u001b[39mSeries \u001b[39m|\u001b[39m pli\u001b[39m.\u001b[39mExpr) \u001b[39m-\u001b[39m\u001b[39m>\u001b[39m DataFrame:\n\u001b[1;32m   4166\u001b[0m     \u001b[39m\"\"\"\u001b[39;00m\n\u001b[1;32m   4167\u001b[0m \u001b[39m    Return a new DataFrame with the column added or replaced.\u001b[39;00m\n\u001b[1;32m   4168\u001b[0m \n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m   4204\u001b[0m \n\u001b[1;32m   4205\u001b[0m \u001b[39m    \"\"\"\u001b[39;00m\n\u001b[0;32m-> 4206\u001b[0m     \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mlazy()\u001b[39m.\u001b[39;49mwith_column(column)\u001b[39m.\u001b[39;49mcollect(no_optimization\u001b[39m=\u001b[39;49m\u001b[39mTrue\u001b[39;49;00m)\n",
+      "File \u001b[0;32m~/opt/anaconda3/lib/python3.9/site-packages/polars/utils.py:391\u001b[0m, in \u001b[0;36mdeprecated_alias.<locals>.deco.<locals>.wrapper\u001b[0;34m(*args, **kwargs)\u001b[0m\n\u001b[1;32m    388\u001b[0m \u001b[39m@functools\u001b[39m\u001b[39m.\u001b[39mwraps(fn)\n\u001b[1;32m    389\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mwrapper\u001b[39m(\u001b[39m*\u001b[39margs: P\u001b[39m.\u001b[39margs, \u001b[39m*\u001b[39m\u001b[39m*\u001b[39mkwargs: P\u001b[39m.\u001b[39mkwargs) \u001b[39m-\u001b[39m\u001b[39m>\u001b[39m T:\n\u001b[1;32m    390\u001b[0m     _rename_kwargs(fn\u001b[39m.\u001b[39m\u001b[39m__name__\u001b[39m, kwargs, aliases)\n\u001b[0;32m--> 391\u001b[0m     \u001b[39mreturn\u001b[39;00m fn(\u001b[39m*\u001b[39;49margs, \u001b[39m*\u001b[39;49m\u001b[39m*\u001b[39;49mkwargs)\n",
+      "File \u001b[0;32m~/opt/anaconda3/lib/python3.9/site-packages/polars/internals/lazyframe/frame.py:1165\u001b[0m, in \u001b[0;36mLazyFrame.collect\u001b[0;34m(self, type_coercion, predicate_pushdown, projection_pushdown, simplify_expression, no_optimization, slice_pushdown, common_subplan_elimination, streaming)\u001b[0m\n\u001b[1;32m   1154\u001b[0m     common_subplan_elimination \u001b[39m=\u001b[39m \u001b[39mFalse\u001b[39;00m\n\u001b[1;32m   1156\u001b[0m ldf \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_ldf\u001b[39m.\u001b[39moptimization_toggle(\n\u001b[1;32m   1157\u001b[0m     type_coercion,\n\u001b[1;32m   1158\u001b[0m     predicate_pushdown,\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m   1163\u001b[0m     streaming,\n\u001b[1;32m   1164\u001b[0m )\n\u001b[0;32m-> 1165\u001b[0m \u001b[39mreturn\u001b[39;00m pli\u001b[39m.\u001b[39mwrap_df(ldf\u001b[39m.\u001b[39;49mcollect())\n",
+      "\u001b[0;31mNotFoundError\u001b[0m: vote_right2"
+     ]
     }
    ],
    "source": [
@@ -821,7 +670,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "3f37090d",
    "metadata": {
     "execution": {
@@ -867,7 +716,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "17bd7358",
    "metadata": {
     "execution": {
@@ -968,7 +817,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12 (main, Apr  5 2022, 01:53:17) \n[Clang 12.0.0 ]"
+   "version": "3.9.12"
   },
   "papermill": {
    "default_parameters": {},
