--- a/notebooks/cold_start_user_predictions.ipynb
+++ b/notebooks/cold_start_user_predictions.ipynb
@@ -1281,7 +1281,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Tensorflow2",
+   "display_name": "lightgbm",
    "language": "python",
    "name": "python3"
   },
@@ -1295,12 +1295,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.15 (main, Nov 24 2022, 08:29:02) \n[Clang 14.0.6 ]"
+   "version": "3.9.13 (main, Aug 25 2022, 18:29:29) \n[Clang 12.0.0 ]"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "1b350c6bc039b235339ea9489d75a763352f51719b4a8dcd6649a2afeac84365"
+    "hash": "772dc14061aeedf7aa844f4263c3f55d9475335dc47a5cd10daefec52219774b"
    }
   }
  },
